<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_gazebo</name>
  <version>0.0.0</version>
  <description>The arm_gazebo package</description>
  <license>TODO: License declaration</license>
  <maintainer email="e.patellaro@studenti.unina.it">Emmanuel Patellaro</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>arm_description</build_depend>
  <build_depend>arm_control</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
